// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> should check component snapshot 1`] = `
.c1 {
  fill: currentColor;
}

.c0 {
  font-size: 18px;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  padding: 0;
  outline: 0;
  overflow: hidden;
}

<CloseButton
  alt="Close"
  handleClose={[Function]}
>
  <Styled(CloseButtonComponent)
    alt="Close"
    handleClose={[Function]}
    size={18}
  >
    <CloseButtonComponent
      alt="Close"
      className="c0"
      handleClose={[Function]}
      size={18}
    >
      <button
        aria-label="Close"
        className="c0"
        onClick={[Function]}
      >
        <Styled(Close)>
          <Close
            className="c1"
          >
            <svg
              className="c1"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M27.893 25.262L18.65 16l9.26-9.262a1.874 1.874 0 0 0-2.647-2.647L16 13.353 6.74 4.108a1.867 1.867 0 0 0-2.63 2.636l9.242 9.26-9.244 9.262c-.34.34-.55.807-.55 1.324a1.874 1.874 0 0 0 3.198 1.324L16 18.65l9.262 9.262c.34.34.807.55 1.324.55a1.874 1.874 0 0 0 1.323-3.198z"
              />
            </svg>
          </Close>
        </Styled(Close)>
      </button>
    </CloseButtonComponent>
  </Styled(CloseButtonComponent)>
</CloseButton>
`;

exports[`<CloseButton /> should check component snapshot with size 1`] = `
.c1 {
  fill: currentColor;
}

.c0 {
  font-size: 50px;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  padding: 0;
  outline: 0;
  overflow: hidden;
}

<CloseButton
  alt="Close"
  handleClose={[Function]}
  size={50}
>
  <Styled(CloseButtonComponent)
    alt="Close"
    handleClose={[Function]}
    size={50}
  >
    <CloseButtonComponent
      alt="Close"
      className="c0"
      handleClose={[Function]}
      size={50}
    >
      <button
        aria-label="Close"
        className="c0"
        onClick={[Function]}
      >
        <Styled(Close)>
          <Close
            className="c1"
          >
            <svg
              className="c1"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="M27.893 25.262L18.65 16l9.26-9.262a1.874 1.874 0 0 0-2.647-2.647L16 13.353 6.74 4.108a1.867 1.867 0 0 0-2.63 2.636l9.242 9.26-9.244 9.262c-.34.34-.55.807-.55 1.324a1.874 1.874 0 0 0 3.198 1.324L16 18.65l9.262 9.262c.34.34.807.55 1.324.55a1.874 1.874 0 0 0 1.323-3.198z"
              />
            </svg>
          </Close>
        </Styled(Close)>
      </button>
    </CloseButtonComponent>
  </Styled(CloseButtonComponent)>
</CloseButton>
`;
